app/scss/modules/nav.scss
/***************************************************************************************
* Navbar
***************************************************************************************/

.navbar-brand {
  float: left;
  padding: $navbar-padding-vertical $navbar-padding-horizontal 0px $navbar-padding-horizontal; //CHANGE
  font-size: $font-size-large;
  line-height: $line-height-computed;

  &:hover,
  &:focus {
    text-decoration: none;
  }

  @media (min-width: $grid-float-breakpoint) {
    .navbar > .container & {
      margin-left: -$navbar-padding-horizontal;
    }
  }
}

.navbar{
  z-index: 100;
}

// Navbar nav links
//
// Builds on top of the `.nav` components with it's own modifier class to make
// the nav the full height of the horizontal nav (above 768px).

.navbar-nav {
  margin: ($navbar-padding-vertical / 2) (-$navbar-padding-horizontal);

  > li > a {
    padding-top:    10px;
    padding-bottom: 10px;
    line-height: $line-height-computed;
  }

  @media (max-width: $screen-xs-max) {
    // Dropdowns get custom display when collapsed
    .open .dropdown-menu {
      position: static;
      float: none;
      width: auto;
      margin-top: 0;
      background-color: transparent;
      border: 0;
      box-shadow: none;
      > li > a,
      .dropdown-header {
        padding: 5px 15px 5px 25px;
      }
      > li > a {
        line-height: $line-height-computed;
        &:hover,
        &:focus {
          background-image: none;
        }
      }
    }
  }

  // Uncollapse the nav
  @media (min-width: $grid-float-breakpoint) {
    float: left;
    margin: 0;

    > li {
      float: left;
      > a {
        padding-top: (($navbar-height - $line-height-computed) / 2);
        padding-bottom: 0px; //CHANGE
      }
    }
  }
}

// Basic Styling
.overlay_container.show.overlay {
  height: 1000px;
  background: rgba(50, 50, 50, 0.5);
  height: 1000px;
  position: fixed;
  width: 100%;
  z-index: 1000;
}

#container {
  transform: translatex(0%);
  transition: all 0.5s;
}

header.show .container {
  padding-top: 10px;
  margin-top: -10px;
}
.menu__container {
  z-index: 1001;
}
#container.show {
  position: fixed;
  top: 10%;
  transform: translatex(77%);
  transition: all 0.5s;
}

.list-unstyled {
  list-style: none;
}

.navbar-left{
  float: left;
}

.navbar-right {
  float: right;
  margin-left: 10px;
}

.remember{
  display: inline;
  margin-bottom: 5px;
  font-weight: normal;
  text-transform: lowercase;
}

/******************** Mobile ********************/


.navbar-brand {
  padding: 15px 10px 0px 10px;
}

.navbar-header{
  width: 100%;
  padding: 0 13px;
  transform: translatex(0%);
  transition: all 0.563s;
  margin-top: 10px;
}

.navbar-header.show {
  position: fixed;
  z-index: 100000;
  margin-left: 10px;
  transform: translatex(73%);
  transition: all 0.5s;
  margin-top: 10px;
  .navbar-brand.logo {
    width: 80%;
  }
  .navbar-brand.logo, .navbar--login {
    opacity: 0;
  }
}

.nav__side--toggle {
  position: relative;
  padding: 9px 0px;
  margin-top: 5px;
  margin-bottom: 0px;
  background-color: transparent;
  background-image: none;
  border: 1px solid transparent;
  z-index: 10000;
  border-radius: 4px;
  outline: none;
}

.nav__side--toggle .icon-bar {
  background-color: #555;
  width: 22px;
  height: 3px;
  display: block;
  margin: 3px 0px;
  box-shadow: inset 0 1px 10px rgba(0,0,0,0.1);
}

/* Sidebar nav */

.side-nav {
  position: fixed;
  z-index: 100000;
  height: 100%;
  background-color: #f9f9f9;
  padding-right: 0;
  padding-top: 10px;
  transform: translatex(-125%);
  transition: all 0.5s;
  .icon--small {
    transform: rotate(0deg);
  }

}

.side-nav.show {
  overflow: scroll;
  right: 17%;
  width: 75%;
  padding: 10px 0 0 0;
  box-shadow: inset -7px 0 9px -7px rgba(0,0,0,0.175);
  text-transform: uppercase;
  border-bottom: 1px solid #ddd;
  text-decoration: none;
  transform: translatex(-11%);
  transition: all 0.5s;
}

.side-nav__search {
  margin-top: 10px;
  margin-bottom: 10px;
  max-width: 475px;
  padding: 5px;
  width: 95%;
}

.side-nav__dropdown {
  position: absolute;
  width: 100%;
  padding: 0;
  z-index: 10000;
  font-size: 14px;
  background: #eaeced;
  color: #323232;
  border-radius: 0px;
  border: none;
  position: relative;
  float: none;
}

.side-nav__subnav {
  top: 100%;
  left: 0;
  z-index: 1000;
  float: left;
  min-width: 160px;
  padding: 5px 0;
  /*margin: -1px 0px 15px 0px;*/
  list-style: none;
  font-size: 14px;
  border: 1px solid #ccc;
  border: 1px solid rgba(0,0,0,.15);
  border-radius: 0px;
  background-clip: padding-box;
  width: 100%;
}

.side-nav__subnav__item-container, .navbar--login__container {
  float: none;
}

.side-nav__subnav--item .heading__item, .side-nav__subnav--item .heading__item:hover {
  text-transform: none;
}

.side-nav__subnav.collapse.in, .side-nav__subnav.collapsing {
  position: static;
  float: none;
  width: auto;
  margin-top: 0;
  background-color: transparent;
  border: 0;
  box-shadow: inset -7px 0 9px -7px rgba(0,0,0,0.2);
  display: block;
  text-transform: uppercase;
  border-bottom: 1px solid #ddd;
  text-decoration: none;
  border-radius: 0;
}
/*
.heading__title+.side-nav__subnav {
  transform: rotate(180deg);
}
*/

.heading__title, .nav .open > a.heading__title {
  color: #4c4c4c;
  display: block;
  padding: 17px 15px;
  background: #f9f9f9;
  box-shadow: inset -7px 0 9px -7px rgba(0,0,0,0.175);
  text-transform: uppercase;
  border-bottom: 1px solid #ddd;
  text-decoration: none;
}

.heading__item, .heading__item:hover {
  padding: 10px;
  text-transform: uppercase;
  color: #4c4c4c;
  background: none;
  line-height: 25px;
  width: 100%;
  display: block;
}


/******************** Desktop ********************/

.navbar__dropdown {
  padding: 10px;
  display: block;
  margin-left: -8px;
}

.navbar__dropdown--subnav {
  top: -100000px;
  opacity: 0;
  position: absolute;
  display: block;
  width: auto;
  background-color: #fff;
  border: solid #cfcdcd 1px;
}

.navbar__dropdown--item{
  display: inline;
  &:hover {
    display: inline-block;
    > .navbar__dropdown--subnav {
      top: 125px;
      opacity: 1;
      padding: 0;
      position: absolute;
      z-index: 10000000;
      transition: opacity .2s ease 0.1s, top .2s ease 0.1s;
      .heading__item {
        text-transform: none;
        color: #292929;
        padding: 5px 7px 5px 25px;
        display: block;
        /*background: url(/img/icon_nav_li.png) no-repeat 14px 8px;*/
        font-size: 12px;
        white-space: normal;
        font-weight: bold;
      }
    }
  }
}

.navbar__dropdown--subnav--item {
  display: inline-block;
  padding: 10px 15px 10px 0;
  vertical-align: top;
  &:first-child {
    background: #eee;
    max-width: 250px;
  }
}

.navbar__dropdown--item:hover > .navbar--heading__title {
  color: #fff;
  @include gradient(#7AA8C2, #4A81A0);

  &:after {
    content: "";
    display: block;
    position: absolute;
    left: 10px;
    bottom: -10px;
    width: 0;
    height: 0;
    border-color: #7aa8c2 transparent transparent transparent;
    border-style: solid;
    border-width: 5px;
  }
}

.navbar--heading__title{
  display: inline-block;
  position: relative;
  margin-bottom: 50px;
  padding: 4px 10px 4px 10px;
  border-radius: 4px;
  text-transform: uppercase;
}

.navbar__dropdown--subnav__list{
  padding: 0;
  width: auto;
  float: none;
}

.navbar__dropdown--subnav__list--item {
  margin: 0;
  padding: 5px 7px 5px 25px;
  border: none;
  background: none;
  display: block;
  width: auto;
  &:hover a {
    color: #b05c30;
    text-decoration: underline;
  }
  &:before {
    content:">";
    color: #bbb;
  }
}

.login__container {
  float: none;
}

.navbar--login {
  float: right;
  margin-top: 2px;
  background-color: #fff;
  &:hover {
    a.dropdown-toggle:after {
      content: "";
      opacity: 0;
    }
  }

  .btn {
    margin-top: 10px;
    margin-bottom: 15px;
  }

  .dropdown-menu {
    left: calc(100% - 300px);
    width: 300px;
  }
}

.navbar--login__submit--label {
  text-transform: lowercase;
}

.navbar--login__button {
  padding: 0;
}

.navbar--login__dropdown  {
  opacity: 0;
  display: none;
  position: absolute;
  right: 12px;
  top: -170%;
  border: 1px solid #ccc;
  background-color: #fff;
  z-index: -1000000;
  transition: opacity 0.2s, top 0.75s;
}

.navbar--login__dropdown.toggleOpen {
  opacity: 1;
  top: 100%;
  display: block;
  z-index: 1000000;
  transition: opacity 0.2s, top 0.75s;
}

.navbar--login__input {
  margin: 10px 0;
  width: 100%;
}

.btn.navbar--login__submit {
  color: #fff;
  @include gradient(#7AA8C2, #4A81A0);
}

.icon__container {
  position: absolute;
  margin-top: -32px;
  right: 18px;
}

/***** Mobile Nav *****/

@media (max-width: 992px) {
  .navbar-brand.logo {
    width: 78%;
    > img {
      margin-left: auto;
      margin-right: auto;
      width: 140px;
      display: block;
      margin-top: 0px;
    }
  }
}

